Fix nav spacing

--- a/_sass/components/_nav.scss
+++ b/_sass/components/_nav.scss
@@ -102,7 +102,7 @@
     }
     @include bp(laptop) {
       display: inline-block;
-      padding: 17px 26px;
+      padding: 17px 18px;
     }
   }
 }
